<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.crazynet.taxidegladriver.profileFragment">


    <android.support.v7.widget.CardView
        android:id="@+id/Driver_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="17dp"
        >

        <ImageView
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:src="@mipmap/person"
            />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/txt_f_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:fontFamily="@font/gibsonregular"
        app:layout_constraintTop_toBottomOf="@id/Driver_image"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/driver_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_f_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="سليمان"
        android:textSize="17sp"
        android:fontFamily="@font/gibsonsemibold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/txt_s_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondName"
        android:fontFamily="@font/gibsonregular"
        app:layout_constraintTop_toBottomOf="@id/driver_first_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/driver_second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_s_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="الرائد"
        android:textSize="17sp"
        android:fontFamily="@font/gibsonsemibold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/txt_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber"
        android:fontFamily="@font/gibsonregular"
        app:layout_constraintTop_toBottomOf="@id/driver_second_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="35dp"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_phone">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="6dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/egy"
            />
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+ 1 (324) 242-22457"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"/>

    </LinearLayout>


    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/gibsonregular"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="35dp"/>

    <TextView
        android:id="@+id/driver_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_email"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Salomon@gmail.com"
        android:textSize="17sp"
        android:fontFamily="@font/gibsonsemibold"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:background="@drawable/goldbutton"
        android:text="@string/updateDriverData"
        android:textColor="@color/white"
        android:fontFamily="@font/gibsonbold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"/>
</android.support.constraint.ConstraintLayout>
